--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TroisJS App</title>
+    <title>Sixteen Messages</title>
   </head>
   <body>
     <div id="app"></div>
